--- a/views/article.pug
+++ b/views/article.pug
@@ -19,6 +19,21 @@ block content
   h4
     b Margin/Edge
   p= article.completed
+  h4
+    b Division
+  p= article.division
+  h4
+    b Season
+  p= article.season
+  h4
+    b Disease
+  p= article.disease
+  h4
+    b Description
+  p= article.description
+  h4
+    b Location
+  p= article.place
   hr
   if user
     if user.id ==article.author
