--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,8 @@ html
             if user
               li
                 a(href='/articles/add') Add Leaf
+              li
+                a(href='/articles/dashboard') Dashboard  
           ul.nav.navbar-nav.navbar-right
             if user
               li
