annotation complete form field

--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -17,7 +17,7 @@ block content
           option(value='Isolated Leaf') Isolated Leaf
           option(value='Cluster of leaves') Cluster of Leaves
           option(value='Partial Tree') Partial Tree
-          option(value='Full Tree') Full Tree    
+          option(value='Full Tree') Full Tree
 
     #form-group
       h3 Leaf Attribute
@@ -81,6 +81,12 @@ block content
     #form-group
       label Photo:
       textarea.form-control(name='photo')
+    #form-group
+      label Annotation Completed?:
+      div(class="input-group")
+        select(class="selectpicker form-control" name="annotation")
+          option(value='yes') Yes
+          option(value='no') No
     br
     input.btn.btn-primary(type='submit',value='Submit')
 
@@ -94,6 +100,6 @@ block content
       function alertFilename()
            {
                var thefile = document.getElementsByName('profileImage');
-               alert('fuck off');
+               alert('click Upload to complete');
                document.getElementsByName('photo')='hi' ;
            }
