--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html
               li
                 a(href='/articles/add') Add Leaf
               li
-                a(href='/articles/dashboard') Dashboard
+                a(href='http://localhost:8080') Dashboard
           ul.nav.navbar-nav.navbar-right
             if user
               li
