--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ block content
   h1 #{title}
   ul.list-group
     each article, i in articles
-      li.list-group-item
-        a(href="/articles/"+article._id)= i+1 + '. ' + article.title
+      if (article.annotation=='yes')
+        li.list-group-item
+          a(href="/articles/"+article._id)= i+1 + '. ' + article.title
   h1 #{i}
