--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,8 +4,8 @@ html
     title Leaf Project
     link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet' href='/css/style.css')
-    link(type='text/css', rel='stylesheet', href='/css/annotorious.css')
-    script(type='text/javascript', rel='script', href='/js/annotorious.min.js')
+    link(rel='stylesheet' href='/css/annotorious.css')
+    block extraHeader
   body
     nav.navbar.navbar-inverse
       .container
