annotation and lead add works

--- a/views/add_article1.html
+++ b/views/add_article1.html
@@ -14,5 +14,11 @@ this is a test page
 <img src="leaf.jpg" class="annotatable" />
 
 
+<form action="http://localhost:3000/articles/add" method="post" enctype="multipart/form-data">
+  First name: <input type="text" name="title"><br>
+  Last name: <input type="text" name="author"><br>
+  <input type="submit" value="Submit">
+</form>
+
 </body>
 </html>
