--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,9 @@ html
               a(href='/') Home
             if user
               li
-                a(href='/articles/add') Add Leaf
+                a(href='/articles/add') Add Leaf Type
+              li
+                a(href='http://localhost:8081') Add Leaf
               li
                 a(href='http://localhost:8080') Dashboard
           ul.nav.navbar-nav.navbar-right
