--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -16,12 +16,7 @@ block content
       textarea.form-control(name='body')= article.body
     #form-group
       label Picture Type:
-      div(class="input-group")
-        select(class="selectpicker form-control" name="location")
-          option(value='Isolated Leaf') Isolated Leaf
-          option(value='Cluster of leaves') Cluster of Leaves
-          option(value='Partial Tree') Partial Tree
-          option(value='Full Tree') Full Tree
+      input.form-control(name='location', type='text', value=article.location)
     #form-group
       label Shape:
       div(class="input-group")
@@ -85,8 +80,9 @@ block content
       label Annotation Completed?:
       div(class="input-group")
         select(class="selectpicker form-control" name="annotation")
-          option(value='yes') Yes
           option(value='no') No
+          option(value='yes') Yes
+
     br
     h4 Replace image by choosing another file below
     input(type='file', name='profileImage', multiple onchange='alertFilename()')
