--- a/views/query_indLeaf.pug
+++ b/views/query_indLeaf.pug
@@ -6,5 +6,5 @@ block content
   ul.list-group
     each article, i in articles
       li.list-group-item
-        a(href="/articles/"+article._id)= i+1 + '. ' + article.title
+        a(href="/articles/"+article._id)= i+1 + '. ' + article.title + ' | ' + article.location
   h1 #{i}
