--- a/views/query_myleaves.pug
+++ b/views/query_myleaves.pug
@@ -1,10 +1,11 @@
 extends layout
 
 
+
 block content
   h1 #{title}
   ul.list-group
     each article, i in articles
       li.list-group-item
-        a(href="/articles/"+article._id)= i+1 + '. ' + article.title
+        a(href="/articles/"+article._id)= i+1 + '. ' + article.title + ' | ' + article.location 
   h1 #{i}
